@@ -1,5 +1,7 @@
 HEAD
 	+ Bug fix: off-by-one error on remote file search
+	+ Bug fix: add lock to avoid overlapping between
+	  backup processes (Closes #1680)
 1.3.13
 	+ Bug fix: add --force to delete old backup sets
 	+ Bug fix: fix restoring of the first file
